templates/daemonset-template.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-template
spec:
  selector:
    matchLabels:
      key: value
  template:
    metadata:
      labels:
        key: value
    spec:
      containers:
        - name: daemonset-container
          image: nginx
