templates/pod-with-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
spec:
  containers:
    - name: container-name
      image: nginx
      ports:
        - containerPort: 80
