templates/service-clusterip-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
