templates/service-nodeport-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
